changes in the usability to deliver.

--- a/styles.css
+++ b/styles.css
@@ -19,15 +19,35 @@ div.col1-title {
 }
 div.col1-container {
   margin-left: 10px;
-  background-color: var(--color, #fff);
   border-radius: 6px;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   margin-right: 10px;
   height: 100px;
 }
+strong.actual {
+  color: black;
+  font-size: 30px;
+}
+strong.nearest {
+  color: black;
+  font-size: 30px;
+}
+h2.font-card-1 {
+  display: flex;
+  padding: 20px 20px;
+  color: white;
+  mix-blend-mode: difference;
+  justify-content: space-around;
+}
+h2.font-card-2:after {
+  display: flex;
+  padding: 20px 20px;
+  color: white;
+  mix-blend-mode: difference;
+  justify-content: space-around;
+}
 div.col2-container {
   margin-left: 10px;
-  background-color: var(--approximateColor, #fff);
   border-radius: 6px;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   margin-right: 10px;
@@ -66,7 +86,8 @@ input:focus {
 }
 button {
   background-color: '#3f51b5';
-  color: white;
+  display: none;
+  color: black;
   padding: 5px 15px;
   border-radius: 5px;
   outline: 0;
@@ -82,4 +103,29 @@ button:hover {
 button:disabled {
   cursor: default;
   opacity: 0.1;
+}
+#myProgress {
+  width: 100%;
+  background-color: lightgrey;
+}
+
+#myBar {
+  width: 1%;
+  height: 20px;
+  background-color: #000010;
+}
+
+#myMsg {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  color: rgb(26, 23, 23);
+  animation: blinker 1s step-start infinite;
+  background-color: white;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
